SERVER-29343 make lookupCollectionByUUID and lookupNSSByUUID const